Wrap footer on 1025px. Adjust margin between links to prevent wrap inside link.

--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -12,7 +12,7 @@
     min-height: 420px;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1025px) {
     .dsa-footer {
         min-height: 240px;
     }
@@ -32,9 +32,9 @@
     width: 100%;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1025px) {
     .dsa-footer-inner {
-        padding: 2rem 2rem 4rem 2rem;
+        padding: 2rem 1rem 4rem 1rem;
     }
 }
 
@@ -52,7 +52,7 @@
     color: #fff;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1025px) {
     .dsa-footer-slogan {
         margin: 0 0 4rem 0;
     }
@@ -89,7 +89,7 @@
     width: 100%;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1025px) {
     .dsa-footer-ul {
         display: flex;
     }
@@ -106,7 +106,13 @@
     color: #fff;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1025px) {
+    .dsa-footer-link {
+        margin: 0 1.125rem 0 0;
+    }
+}
+
+@media (min-width: 1156px) {
     .dsa-footer-link {
         margin: 0 2rem 0 0;
     }
